# GeometryViewer

./: AUTHORS  GeometryViewer.sh  README.md  bundle.sh
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pen_geoViewInterface.hh  textconfig.cpp  textconfig.h  viewer.cpp  viewer.h
